# SIID-2

./: GEMINI.md  README.md  main.py  pyproject.toml
notebooks/: class1.ipynb  linear-prog.ipynb  simplex.ipynb
src/: branch_n_bound.py  simplex.py  test_highs.py  test_ortools.py
